--- a/config/release-config.yaml.sample
+++ b/config/release-config.yaml.sample
@@ -12,8 +12,8 @@ teams:
   - name: "APP SHOP"
     em: "Srini Arul David"
     em_email: "srini.arul.david@macys.com"
-    sm: "Wagner Prochno"
-    sm_email: "wagner.prochno@macys.com"
+    sm: "Roman Mashchak"
+    sm_email: "mashchak.roman@macys.com"
   - name: "APP TRANSACT"
     em: "Wil Klentzeris"
     em_email: "wil.klentzeris@macys.com"
